k8s/base/cilium-allow-all-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-all-egress
  namespace: signalwave
spec:
  endpointSelector: {}
  egress:
    - {}
