k8s/base/cilium-deny-all-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: signalwave
spec:
  endpointSelector: {}
  ingress: []
